2022-12-12 - v 2.94 - JJDai - jjdelalandre@orange.fr
---------------------------------------------------
- Ajout des type de question avec images à cliquer
- Ajout des type de question avec images et Drag and Drop

2022-10-25 - v 2.92 - JJDai - jjdelalandre@orange.fr
---------------------------------------------------
- Ajout du champ quiz_showAllSolutions dans la table quiz
- Ajout de l'expot dans l'onglet quiz zt question pour plus de paticité
- Séparation des "page_info" en "pageBegin", "pageEnd" et "pageGroup"
- Ajout des modèles en image pour faciliter le choix du type de question
- Ajout de la categorie d'origine lors de l'import (crée ou recherche une categorie de même nom)


2022-04-06 - v 2.92 - JJDai - jjdelalandre@orange.fr
---------------------------------------------------
- Ajout du champ see_also et read_more dans la table des solutions
- Gestion de l'onglet "Résultats" : suppresion global et individuel par quiz 
- Ajout du flag "numerotation" dans la liste de l'admin des questions

2022-04-06 - v 2.6 - JJDai - jjdelalandre@orange.fr
---------------------------------------------------
- Corrections de bugs
- modification de l'enchainement à la fin du quiz avec les slutions
- Modifcation dans l'admin de la gestion des flag, les icones sont remplacer par des espresssions et de la couleur pour faciliter la lecture
  exemple : N/Y en rouge et vert
- correction du form about
- Ajout de pages d'information->encart pour permettre des regrouppements de questions

==============================================================
Change Log for CreaQuiz - 2020/08/27 12:19:51 Version 1.0
==============================================================
 - Original release creaquiz (Jean-Jacques Delalandre)